@@ -1,5 +1,6 @@
 2010-11-10  Andy Grunwald  <andreas.grunwald@wmdb.de>
 
+	* Fixed bug #3767: Multiple forms on 1 page with mandatory file uploads fields gives errors
 	* Fixed bug #5894: Typo in pi1/locallang.xml
 	* Fixed bug #5603: Call to an non member function enableFields
 
